--- a/product.html
+++ b/product.html
@@ -598,34 +598,46 @@
 
     // ✅ Image fallbacks (by ID) — your updated filenames
     const IMAGE_MAP = {
-      "zaamatic": "Zaamatic.JPG",
+      "zaamatic": "Zaamatic.png",
       "double-bubble": "Double-bubble.png",
       "pink-certz": "Pink-Certz.png",
-      "space-candy": "SpaceCandy.JPG",
-      "fruit-snacks": "FruitStripes.JPG",
-      "sherbert": "Sherbet.JPG",
+      "space-candy": "Space-Candy.png",
+      "fruit-snacks": "Fruit-Stripes.png",
+      "sherbert": "Sherbert.png",
       "silver-back-gorilla": "SilverBackGorilla.jpg",
       "bubblegum-poppers": "BubbleGumPoppers.jpg",
       "pink-cadillac": "PinkCadillac.jpg",
       "candy-fumez-shake": "CandyFumesShake.jpg",
       "sherb-candy-shake": "SherbCandyShake.jpg",
+      "sugar-shock": "Sugar-Shock.png",
+      "ready-to-trap": "Ready-To-Trap.png",
+      "rainbow-belts": "Rainbow-Belts.png",
+      "frosted-peaches": "Frosted-Peaches.png",
+      "crazzy": "Crazzy.png",
+      "adl": "ADL.png",
       "rosin-budder": "RosinBudder.JPG"
     };
 
     // ✅ Image fallbacks (by normalized NAME)
     const NAME_MAP = {
-      "zaamatic": "Zaamatic.JPG",
+      "zaamatic": "Zaamatic.png",
       "doublebubble": "Double-bubble.png",
       "pinkcertz": "Pink-Certz.png",
-      "spacecandy": "SpaceCandy.JPG",
-      "fruitsnacks": "FruitStripes.JPG",
-      "sherbert": "Sherbet.JPG",
+      "spacecandy": "Space-Candy.png",
+      "fruitsnacks": "Fruit-Stripes.png",
+      "sherbert": "Sherbert.png",
       "silverbackgorilla": "SilverBackGorilla.jpg",
       "bubblegumpoppers": "BubbleGumPoppers.jpg",
       "pinkcadillac": "PinkCadillac.jpg",
       "candyfumezexoticshake": "CandyFumesShake.jpg",
       "candyfumezshake": "CandyFumesShake.jpg",
       "sherbcandyshake": "SherbCandyShake.jpg",
+      "sugarshock": "Sugar-Shock.png",
+      "readytotrap": "Ready-To-Trap.png",
+      "rainbowbelts": "Rainbow-Belts.png",
+      "frostedpeaches": "Frosted-Peaches.png",
+      "crazzy": "Crazzy.png",
+      "adl": "ADL.png",
       "rosinbudder": "RosinBudder.JPG"
     };
 
