--- a/product.html
+++ b/product.html
@@ -478,7 +478,7 @@
       <div class="info">
         <div class="top-badges">
           <div class="cassh-inline" id="casshInline">
-            <img id="casshInlineImg" src="images/CasshrulesOfficial.png" alt="CA$$H RULE$" />
+            <img id="casshInlineImg" src="images/CasshrulesOfficial.png" alt="CA$H RULE$" />
           </div>
 
           <div class="badge type" id="typeBadge">—</div>
@@ -829,7 +829,7 @@
         crumbTrail.textContent = `HOME • ${safeUpper(item.category)} • ${safeUpper(item.subcategory || "ITEM")}`;
         typeBadge.textContent = safeUpper(item.type || item.category);
 
-        const displayBrand = cassh ? "CA$$H RULE$" : (item.brand || "Bobby Black Exclusive");
+        const displayBrand = cassh ? "CA$H RULE$" : (item.brand || "Bobby Black Exclusive");
 
         productTitle.textContent = `${safeUpper(displayBrand)} | ${safeUpper(item.name)}`;
         brandLine.textContent = displayBrand.toUpperCase();
